--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,9 @@
     <item android:title="其它">
         <menu>
             <item
+                android:id="@+id/nav_printer"
+                android:title="连接打印机" />
+            <item
                 android:id="@+id/nav_camera"
                 android:title="设置摄像头" />
             <item
