--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:dropDownListViewStyle">@style/AutoSpinnerStyle</item>
+    </style>
+
+    <style name="AutoSpinnerStyle" parent="@android:style/Theme.Light.NoTitleBar">
+        <item name="android:divider">#cccccc</item>
+        <item name="android:dividerHeight">1dp</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
