--- a/app/src/main/res/layout/dialog_select_date.xml
+++ b/app/src/main/res/layout/dialog_select_date.xml
@@ -14,12 +14,12 @@
         android:textColor="#666666"
         android:textSize="18sp" />
 
-    <com.niucong.scsystem.view.wheel.DateSelectView
+    <com.niucong.scsystem.view.wheel.DateTimeSelectView
         android:id="@+id/date_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dip"
-        android:layout_marginRight="20dip"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="10dip"
         android:gravity="center"
         android:orientation="horizontal" />
 
@@ -31,12 +31,12 @@
         android:textColor="#666666"
         android:textSize="18sp" />
 
-    <com.niucong.scsystem.view.wheel.DateSelectView
+    <com.niucong.scsystem.view.wheel.DateTimeSelectView
         android:id="@+id/date_end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dip"
-        android:layout_marginRight="20dip"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="10dip"
         android:gravity="center"
         android:orientation="horizontal" />
 
