--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,9 +25,9 @@
             <item
                 android:id="@+id/nav_printer"
                 android:title="连接打印机" />
-            <item
-                android:id="@+id/nav_time"
-                android:title="设置对账时间" />
+            <!--<item-->
+                <!--android:id="@+id/nav_time"-->
+                <!--android:title="设置对账时间" />-->
             <item
                 android:id="@+id/nav_data"
                 android:title="导入/导出数据" />
