--- a/app/src/main/res/layout/dialog_bluetooth_list.xml
+++ b/app/src/main/res/layout/dialog_bluetooth_list.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,53 +11,50 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
---><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/black90"
-    
-    > 
-    <TextView android:id="@+id/tvPairedDevices"
-        android:layout_width="fill_parent"
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/tvPairedDevices"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
         android:text="@string/title_paired_devices"
-        android:visibility="gone"
-        android:background="@color/black90"
         android:textColor="@color/white"
-        android:paddingLeft="5dp"
-    />
-    <ListView android:id="@+id/lvPairedDevices"
-        android:layout_width="fill_parent"
+        android:visibility="gone" />
+
+    <ListView
+        android:id="@+id/lvPairedDevices"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stackFromBottom="true"
-        android:layout_margin="5dp" 
-        android:background="@drawable/background_corner"  
-        android:layout_weight="1"
-    />
-    <TextView android:id="@+id/tvNewDevices"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_other_devices"
-        android:visibility="gone"
-        android:background="@color/black90"
-        android:textColor="@color/white"
-        android:paddingLeft="5dp"
-    />
-    <ListView android:id="@+id/lvNewDevices"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:stackFromBottom="true"
-        android:background="@drawable/background_corner"      
-        android:layout_margin="5dp"  
-        android:layout_weight="2"
-        android:visibility="gone"
-    />
-    <Button android:id="@+id/btBluetoothScan"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/scan"
-        android:background="@drawable/button_style"
         android:layout_margin="5dp"
-    />    
+        android:layout_weight="1"
+        android:stackFromBottom="true" />
+
+    <TextView
+        android:id="@+id/tvNewDevices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:text="@string/title_other_devices"
+        android:visibility="gone" />
+
+    <ListView
+        android:id="@+id/lvNewDevices"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="2"
+        android:stackFromBottom="true"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btBluetoothScan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/scan" />
 </LinearLayout>
