--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,12 +28,12 @@
             <!--<item-->
                 <!--android:id="@+id/nav_time"-->
                 <!--android:title="设置对账时间" />-->
-            <item
-                android:id="@+id/nav_data"
-                android:title="导入/导出数据" />
-            <item
-                android:id="@+id/nav_camera"
-                android:title="设置摄像头" />
+            <!--<item-->
+                <!--android:id="@+id/nav_data"-->
+                <!--android:title="导入/导出数据" />-->
+            <!--<item-->
+                <!--android:id="@+id/nav_camera"-->
+                <!--android:title="设置摄像头" />-->
             <item
                 android:id="@+id/nav_help"
                 android:title="使用帮助" />
