--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -16,6 +16,16 @@
         android:textColor="#000000" />
 
     <TextView
+        android:id="@+id/item_search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:layout_weight="1"
+        android:ellipsize="end"
+        android:textColor="#000000" />
+
+    <TextView
         android:id="@+id/item_search_factory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
