--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,7 +9,7 @@
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingBottom="10dp"
               android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -23,7 +23,7 @@
         android:id="@+id/nav_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="5dp"
         android:text="顺昌药品管理"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
